--- a/package.json
+++ b/package.json
@@ -1,19 +1,28 @@
 {
   "name": "type-temp",
   "version": "1.0.0",
-  "main": "index.js",
+  "src": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "parcel ./src/index.html",
+    "test": "echo \"Error: no test specified\" && exit 1" 
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "Implementação de uma **fila circular** utilizando **TypeScript**, desenvolvida como parte da disciplina de **Estrutura de Dados**.",
   "devDependencies": {
     "parcel": "^2.16.1",
     "typescript": "^5.9.3"
   },
   "dependencies": {
     "ts-node": "^10.9.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MateusARJ/fila-circular-ts.git"
+  },
+  "bugs": {
+    "url": "https://github.com/MateusARJ/fila-circular-ts/issues"
+  },
+  "homepage": "https://github.com/MateusARJ/fila-circular-ts#readme"
 }
